// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment should redirect 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Redirect\\",\\"redirectUrl\\",\\"mocked_url\\",\\"signature\\",\\"mocked_signature\\"]",
      "error": false,
    },
  ],
]
`;

exports[`Payment should return 3d json response 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Adyen3D\\",\\"IssuerURL\\",\\"mocked_url\\",\\"PaRequest\\",\\"mocked_PaReq\\",\\"MD\\",\\"mocked_MD\\"]",
      "error": false,
    },
  ],
]
`;

exports[`Payment should return 3ds2 json response 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Adyen3DS2\\",\\"resultCode\\",\\"IdentifyShopper\\",\\"token3ds2\\",\\"mocked_token\\"]",
      "error": false,
    },
  ],
]
`;

exports[`Payment should return json with error details when payment is unsuccessful 1`] = `
Array [
  Array [
    Object {
      "error": true,
      "errorMessage": "mocked_error.payment.not.valid",
    },
  ],
]
`;
